[project]
name = "jarvis"
version = "0.1.0"
description = "A tool bringing the power of remote LLM inference to your shell to enable agentic workflows and local command execution. Similar to OpenCode, Claude Code, and OpenAI Codex."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai==1.12.1",
    "python-dotenv==1.1.0",
]
